--- a/src/components/NavBar/NavBar.scss
+++ b/src/components/NavBar/NavBar.scss
@@ -12,5 +12,17 @@
             width: 100%;
             height: 100%;
         }
+        .cart-num{
+           height: 20px;
+           width: 50px;
+            border-radius: 999px;
+            background-color: red;
+            margin-top:0px;
+            margin-bottom: 20px;
+            margin-left: 30px;
+            right: 0;
+            font-size: 15px;
+            
+        }
     }
 }
